--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-brandlessBar-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "User Id=postgres;Password=b1cJBQZ0e6BjaI06;Server=db.njuuzelhimoeiztijwvd.supabase.co;Port=5432;Database=bar"
   },
   "Logging": {
     "LogLevel": {
