--- a/brandlessBar.csproj
+++ b/brandlessBar.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.11" />
@@ -16,6 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
     <PackageReference Include="NLog" Version="5.2.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.0.2" />
@@ -33,6 +36,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\AlternativeDTO\Controllers\" />
+    <Folder Include="Areas\AlternativeDTO\Data\" />
+    <Folder Include="Areas\AlternativeDTO\Models\" />
+    <Folder Include="Areas\AlternativeDTO\Views\" />
     <Folder Include="Tests\Repositories\" />
   </ItemGroup>
 
